Fixed spacing of elements, added doubleclick reset

--- a/assets/comments.css
+++ b/assets/comments.css
@@ -1,5 +1,5 @@
 #tmw-comment-containers-outer {
-  width: 90%;
+  width: 100%;
   overflow-y: auto;
   overflow-x: visible;
   flex: 1 1 auto;
