--- a/assets/modal.css
+++ b/assets/modal.css
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 100vw;
   background: var(--modal-background-color);
-  z-index: 2;
+  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
