--- a/assets/notes.css
+++ b/assets/notes.css
@@ -1,7 +1,6 @@
 #tmw-note-container-outer {
-  width: 90%;
+  width: 100%;
   height: 95%;
-  margin-bottom: 5%;
   background: var(--container-background-color);
   border-radius: 20px;
   display: flex;
